# cef-ffmpeg-egl-poc001

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  run.ps1
html/: index.html
scripts/: entrypoint.sh
src/: browser_app.cpp  browser_app.h  browser_client.cpp  browser_client.h  gl_renderer.cpp  gl_renderer.h  gl_window.cpp  gl_window.h  main.cpp  render_handler.cpp  render_handler.h  video_decoder.cpp  video_decoder.h
